--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,6 @@ version = "0.1.0"
 edition = "2024"
 
 [dependencies]
-libc = "0.2"
 memmap2 = "0.9.4"
-nix = { version = "0.28.0", features = ["fs"] }
+linux-futex = "0.2.0"
+nix = { version = "0.28.0", features = ["fs", "mman"] }
